add fix for logo on dark bg
Signed-off-by: Mark Sagi-Kazar <mark.sagikazar@gmail.com>

--- a/2023-05-12-automate-secret-rotation-in-kubernetes/custom.scss
+++ b/2023-05-12-automate-secret-rotation-in-kubernetes/custom.scss
@@ -10,3 +10,7 @@
 .reveal .slide-logo {
   max-height: 8rem !important;
 }
+
+.reveal.has-dark-background .slide-logo {
+  display: none !important;
+}
