kcd bukarest slides
Signed-off-by: Mark Sagi-Kazar <mark.sagikazar@gmail.com>

--- a/resources/templates/revealjs/title-slide.html
+++ b/resources/templates/revealjs/title-slide.html
@@ -1,4 +1,6 @@
 <section id="$idprefix$title-slide"$for(title-slide-attributes/pairs)$ $it.key$="$it.value$"$endfor$>
+$if(title-slide-no-content)$
+$else$
   <h1 class="title">$title$</h1>
 $if(subtitle)$
   <p class="subtitle" style="font-style: italic;">$subtitle$</p>
@@ -15,5 +17,6 @@ $if(date)$
 $elseif(event)$
   <br>
   <p class="date">$event$</p>
+$endif$
 $endif$
 </section>
