update workshop slides
Signed-off-by: Mark Sagi-Kazar <mark.sagikazar@gmail.com>

--- a/2025-05-05-accelerate-your-development-and-cicd-pipelines-with-dagger/custom.css
+++ b/2025-05-05-accelerate-your-development-and-cicd-pipelines-with-dagger/custom.css
@@ -6,5 +6,9 @@
 }
 
 .v-center-container > .column {
-    vertical-align: middle;
+  vertical-align: middle;
+}
+
+.reveal.has-dark-background .slide-logo {
+  display: none !important;
 }
